# ChangeLog for dev-haskell/yesod
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/yesod/ChangeLog,v 1.11 2015/04/05 01:22:45 gienah Exp $

*yesod-1.4.1.4 (05 Apr 2015)

  05 Apr 2015; Mark Wright <gienah@gentoo.org> +yesod-1.4.1.4.ebuild:
  Bump yesod to 1.4.1.4

  07 Feb 2015; Alexander Vershilov <qnikst@gentoo.org> -yesod-1.1.9.2.ebuild,
  -yesod-1.2.0.1.ebuild, -yesod-1.2.1.1.ebuild, -yesod-1.2.1.ebuild,
  -yesod-1.2.2.1.ebuild, -yesod-1.2.4.ebuild, -yesod-1.2.5.ebuild,
  -yesod-1.4.1.1.ebuild:
  cleanup

*yesod-1.4.1.3 (22 Dec 2014)

  22 Dec 2014; Mark Wright <gienah@gentoo.org> +yesod-1.4.1.3.ebuild:
  Bump yesod to 1.4.1.3

*yesod-1.4.1.1 (14 Dec 2014)

  14 Dec 2014; Mark Wright <gienah@gentoo.org> +yesod-1.4.1.1.ebuild:
  Bump yesod to 1.4.1.1

  25 Jul 2014; Sergei Trofimovich <slyfox@gentoo.org> yesod-1.1.9.2.ebuild,
  yesod-1.2.0.1.ebuild, yesod-1.2.1.1.ebuild, yesod-1.2.1.ebuild,
  yesod-1.2.2.1.ebuild, yesod-1.2.4.ebuild, yesod-1.2.5.ebuild,
  yesod-1.2.6.ebuild:
  Drop trailing '.' from description.

  25 Jul 2014; Sergei Trofimovich <slyfox@gentoo.org> metadata.xml:
  Drop redundant '<maintainer>' field, leave only '<herd>'.

*yesod-1.2.6 (02 Jul 2014)

  02 Jul 2014; Mark Wright <gienah@gentoo.org> +yesod-1.2.6.ebuild:
  Bump yesod to 1.2.6

*yesod-1.2.5 (09 Mar 2014)

  09 Mar 2014; Mark Wright <gienah@gentoo.org> +yesod-1.2.5.ebuild:
  Bump yesod to 1.2.5

*yesod-1.2.4 (11 Dec 2013)

  11 Dec 2013; Mark Wright <gienah@gentoo.org> +yesod-1.2.4.ebuild:
  Bump yesod to 1.2.4

*yesod-1.2.2.1 (13 Sep 2013)

  13 Sep 2013; Mark Wright <gienah@gentoo.org> +yesod-1.2.2.1.ebuild:
  Bump yesod to 1.2.2.1

*yesod-1.1.9.2 (26 Aug 2013)
*yesod-1.2.1.1 (26 Aug 2013)
*yesod-1.2.1 (26 Aug 2013)
*yesod-1.2.0.1 (26 Aug 2013)

  26 Aug 2013; Alexander Vershilov <qnikst@gentoo.org> +metadata.xml,
  +yesod-1.1.9.2.ebuild, +yesod-1.2.0.1.ebuild, +yesod-1.2.1.1.ebuild,
  +yesod-1.2.1.ebuild: