@@ -1,6 +1,11 @@
 # ChangeLog for dev-haskell/yesod
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/yesod/ChangeLog,v 1.11 2015/04/05 01:22:45 gienah Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/yesod/ChangeLog,v 1.12 2015/08/01 14:48:56 slyfox Exp $
+
+*yesod-1.4.1.5 (01 Aug 2015)
+
+  01 Aug 2015; Sergei Trofimovich <slyfox@gentoo.org> +yesod-1.4.1.5.ebuild:
+  Version bump.
 
 *yesod-1.4.1.4 (05 Apr 2015)
 
